--- a/doublekit-jtest-ui/src/modules/testcase/functionalTest/components/functionalTest.scss
+++ b/doublekit-jtest-ui/src/modules/testcase/functionalTest/components/functionalTest.scss
@@ -1,29 +1,12 @@
+.title-name ant-input{
+    font-size: 28px;
+    margin-right: 100%;
+}
+
 .form-edit1{
     margin: 0 0 25px 55px;
 }
 
 .desc-text:hover{
     border: 1px solid #e4e4e4;
-}
-.funtionalTest-step{
-    .ant-table-cell{
-        padding: 6px;
-    }
-    //功能测试步骤可编辑表格中的单元格
-    .editable-cell-value-wrap-step{
-        height: 85px;
-        padding: 5px 12px;
-        cursor: pointer;
-        background-color: white;
-        width: 325px;
-        overflow: auto;
-    }
-
-    .editable-row:hover .editable-cell-value-wrap-step {
-        border: 1px solid #d9d9d9;
-        border-radius: 4px;
-        padding: 4px 11px;
-    }
-
-
 }
