--- a/doublekit-jtest-ui/src/modules/performance/components/performanceStyle.scss
+++ b/doublekit-jtest-ui/src/modules/performance/components/performanceStyle.scss
@@ -1,3 +1,43 @@
+.form-info{
+    .form-header-title-btn{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        .ant-form-item{
+            .ant-input{
+                font-size: 28px;
+                //padding: 0 0 0 10px;
+                width: 300px;
+            }
+        }
+    }
+
+    .form-default-detail{
+        width: 100%;
+        display: flex;
+        border-bottom: 1px solid #e4e4e4;
+
+        .ant-form-item-label>label{
+            font-size: 12px;
+            color: #b8b8b8;
+            cursor: Default;
+        }
+
+        .ant-input{
+            font-size: 12px;
+            color: #b8b8b8;
+            cursor: Default;
+            width: 100px;
+            padding: 4px 0;
+        }
+    }
+
+    .form-edit-detail{
+
+    }
+}
+
 .performance-box{
     height: 100%;
     overflow: hidden;
@@ -8,7 +48,7 @@
     height: 100%;
     margin: 30px 0 0 0;
     border: 1px solid #e4e4e4;
-    height: 400px;
+    //height: 400px;
 
 
     .task-result-left{
@@ -24,4 +64,13 @@
             background: #f5f5f5;
         }
     }
+}
+
+.task-result-right{
+    width: 100%;
+}
+
+.task-result-title{
+    padding: 7px;
+    background: #ececec;
 }
