--- a/doublekit-jtest-ui/src/common/styles/base.scss
+++ b/doublekit-jtest-ui/src/common/styles/base.scss
@@ -180,3 +180,49 @@ table .icon{
 .ant-table{
     font-size: 13px; 
 }
+
+.flex-right{
+    display: flex;
+    justify-content: flex-end;
+    margin: 10px;
+}
+//详情页中的表单
+.form-info{
+    .form-header-title-btn{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        .ant-form-item{
+            .ant-input{
+                font-size: 28px;
+                //padding: 0 0 0 10px;
+                width: 300px;
+            }
+        }
+    }
+
+    .form-default-detail{
+        width: 100%;
+        display: flex;
+        border-bottom: 1px solid #e4e4e4;
+
+        .ant-form-item-label>label{
+            font-size: 12px;
+            color: #b8b8b8;
+            cursor: Default;
+        }
+
+        .ant-input{
+            font-size: 12px;
+            color: #b8b8b8;
+            cursor: Default;
+            width: 100px;
+            padding: 4px 0;
+        }
+    }
+
+    .form-edit-detail{
+
+    }
+}
