--- a/doublekit-jtest-ui/src/modules/performance/components/performanceStyle.scss
+++ b/doublekit-jtest-ui/src/modules/performance/components/performanceStyle.scss
@@ -49,7 +49,7 @@
     margin: 10px 0 0 0;
     .task-result-info-item{
         background: #f5f5f5;
-        width: 135px;
+        width: 125px;
         height: 80px;
         padding: 5px;
         border-radius: 5px;
@@ -87,3 +87,19 @@
     padding: 7px;
     background: #ececec;
 }
+
+
+.test-detail-contant{
+    .history-info{
+        display: flex;
+        flex-wrap: wrap;
+        .history-info-item{
+            width: 130px;
+            height: 80px;
+            background: #eeeeee;
+            margin: 0 140px;
+        }
+    }
+
+}
+
