--- a/doublekit-jtest-ui/src/assets/iconfont/iconfont.css
+++ b/doublekit-jtest-ui/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2517386 */
-  src: url('iconfont.woff2?t=1648012050485') format('woff2'),
-       url('iconfont.woff?t=1648012050485') format('woff'),
-       url('iconfont.ttf?t=1648012050485') format('truetype');
+  src: url('iconfont.woff2?t=1648177036326') format('woff2'),
+       url('iconfont.woff?t=1648177036326') format('woff'),
+       url('iconfont.ttf?t=1648177036326') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-fanhui2:before {
+  content: "\e6ff";
+}
+
+.icon-back:before {
+  content: "\e622";
 }
 
 .icon-jiedianapp:before {
