--- a/doublekit-jtest-ui/src/modules/apitest/unitcase/components/unitcase.scss
+++ b/doublekit-jtest-ui/src/modules/apitest/unitcase/components/unitcase.scss
@@ -173,7 +173,7 @@ $backgroud-color: #fff;
 
 .method{
     padding: 0 0 0 25px;
-    border-bottom: 1px solid #d9d9d9;
+    //border-bottom: 1px solid #d9d9d9;
     margin: 0 0 30px 0 ;
 
     .method-info{
@@ -193,36 +193,57 @@ $backgroud-color: #fff;
         margin: 0 0 25px 0;
     }
 
-    .method-people-info{
-        margin: 10px 0;
-
-        .people-item{
-            margin: 0 80px 0 0;
-            color: #999;
-        }
-    }
-
     .ant-select:not(.ant-select-customize-input) .ant-select-selector{
         border: none;
     }
 
 }
 
+.method-people-info{
+    margin: 10px 0;
+
+    .people-item{
+        margin: 0 80px 0 0;
+        color: #999;
+    }
+}
+
+
 //instance
+.header-item{
+    padding: 8px;
+    background: #f5f5f5;
+}
+
+.back-contant:hover{
+    color: #48a8d9;
+    cursor: pointer;
+}
+
+.back-ex-header{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    align-items: center;
+    border-bottom: 1px solid #e4e4e4;
+    height: 42px;
+}
+
 .unit-instance{
     height: 100%;
     display: flex;
 
     .unit-instance-detail{
         width: 100%;
-        padding: 20px 30px 0 30px;
+        //padding: 20px 30px 0 30px;
     }
 }
 
 .test-detail-history{
     height: 100%;
-    width: 270px;
-    border: 2px solid #e4e4e4;
+    width: 240px;
+    border: 1px solid #e4e4e4;
+    border-top: none;
     overflow: auto;
 
     .test-detail-history-title{
@@ -232,35 +253,76 @@ $backgroud-color: #fff;
         background: #efefef;
     }
 
-    .history-item:hover{
-        background: #e2f3ff;
-        cursor: pointer;
-    }
 
-    .history-item-selected{
-        background: #e2f3ff;
-    }
 
     .history-item{
         font-size: 13px;
         display: flex;
         border-bottom: 1px solid #e4e4e4;
-        padding: 10px 5px;
+        padding: 10px;
 
-        .history-item-result{
-            color: #fff;
-            height: 22px;
-            padding: 1px;
-            border-radius: 2px;
-            margin: auto;
-        }
+
     }
+}
+
+.history-item:hover{
+    background: #e2f3ff;
+    cursor: pointer;
+}
+
+.history-item-selected{
+    background: #e2f3ff;
+}
+
+.history-item-result{
+    color: #fff;
+    height: 22px;
+    padding: 1px;
+    border-radius: 3px;
+    margin:  auto 20px;
 }
 
 
 .isSucceed{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
     background: #4f9854;
 }
 .isFailed{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
     background: #f04949;
+}
+
+.scene-instance-contant{
+    display: flex;
+    height: 100%;
+
+    .scene-step-contant{
+        width: 240px;
+        border-right: 1px solid #e4e4e4;
+    }
+
+    .scene-step-detail{
+        flex: 1;
+    }
+}
+
+
+.history-step-item{
+    display: flex;
+    padding: 5px;
+    cursor: pointer;
+}
+.history-step-item:hover{
+    background: #e2f3ff;
+}
+
+.apiscene-test{
+    padding: 10px 100px;
+    border: 1px solid #e4e4e4;
 }
