--- a/doublekit-jtest-ui/src/modules/common/commonStyle.scss
+++ b/doublekit-jtest-ui/src/modules/common/commonStyle.scss
@@ -74,4 +74,22 @@
 }
 
 
+//testDarg
+
+.middleBox{
+    height:5px
+}
+
+.middleBox:hover{
+    cursor: n-resize;
+    background:#8282ff;
+}
+
+#bottom{
+
+}
+.test-darg-contant{
+    overflow: hidden;
+    height: 900px;
+}
 
