--- a/src/modules/apitest/http/unitcase/components/unitcase.scss
+++ b/src/modules/apitest/http/unitcase/components/unitcase.scss
@@ -317,6 +317,7 @@ $backgroud-color: #fff;
     display: flex;
     padding: 5px;
     cursor: pointer;
+    border-bottom: 1px solid #e4e4e4;
 }
 .history-step-item:hover{
     background: #e2f3ff;
