--- a/src/modules/sysmgr/common/sysMana.scss
+++ b/src/modules/sysmgr/common/sysMana.scss
@@ -14,6 +14,7 @@
     }
 
     .doublekit-orga-aside {
+        width: 200px;
         height: 100%;
         border-right: 1px solid #e6f7ff;
         ul,li {
