--- a/src/modules/sysmgr/common/sysMana.scss
+++ b/src/modules/sysmgr/common/sysMana.scss
@@ -13,7 +13,7 @@
         }
     }
 
-    .doublekit-orga-aside {
+    .tiklab-orga-aside {
         width: 200px;
         height: 100%;
         border-right: 1px solid #e6f7ff;
