--- a/src/modules/sysmgr/system/sysMana.scss
+++ b/src/modules/sysmgr/system/sysMana.scss
@@ -1,5 +1,5 @@
 .sysmana-layout{
-    height: 100%;
+    height: calc(100% - 50px);
     .site-layout-background {
         background-color: #fff;
     }
