--- a/src/modules/apitest/http/apitest/caseContantStyle.scss
+++ b/src/modules/apitest/http/apitest/caseContantStyle.scss
@@ -3,7 +3,7 @@
     height: 100%;
 
     .test-left{
-        width: 270px;
+        width: 300px;
         padding: 0 15px;
         border-right: 1px solid #e4e4e4;
 
@@ -13,6 +13,7 @@
     }
 
     .test-right{
+        flex: 1;
         width: 100%;
         //margin: 0 10px;
         overflow: auto;
@@ -58,14 +59,15 @@
     cursor: pointer;
     line-height: 35px;
     padding: 0 0 0 21px;
+    border-radius: 5px;
 }
 .categoryNav-li:hover{
-    background-color: #EDF0F5;
+    background-color: #ebebeb;
 }
 
 .action-li{
-    background-color: #e3e8f0;
-    border-right: 3px solid #1296db;
+    background-color: #f5f5f5;
+    border-radius: 5px;
 }
 
 .ant-list-item{
@@ -156,27 +158,29 @@
 }
 
 .left-tree-screen{
-    padding: 5px;
+    padding: 5px 0 0 0;
     margin: 0 0 5px 0;
     display: flex;
     align-items: center;
     //justify-content: center;
     border-bottom: 1px solid #e4e4e4;
 
-    .left-tree-screen-box{
-        display: flex;
-
-        .left-tree-screen-item{
-            margin: 0 3px;
-            padding: 2px;
-            background: #f3f3f3;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .left-tree-screen-item:hover{
-            background: #bbbbbb;
-            color: #ffffff;
-        }
+    .left-tree-screen-item{
+        margin: 0 6px;
+        padding: 2px 5px;
+        background: #ffffff;
+        cursor: pointer;
+        border-bottom: 3px solid #fff;
     }
+
+    .left-tree-screen-item:hover{
+        color: #0055ff;
+        border-bottom: 3px solid #001cff;
+    }
+
+    .left-tree-screen-item-selected{
+        color: #0055ff;
+        border-bottom: 3px solid #001cff;
+    }
+
 }
