--- a/src/modules/common/commonStyle.scss
+++ b/src/modules/common/commonStyle.scss
@@ -96,7 +96,7 @@
 
 .ws-side-menu{
     border-right: 1px solid #e4e4e4;
-
+    background: #f9f9f9;
 }
 
 
@@ -115,12 +115,12 @@
     }
 
     .ws-menu-li:hover{
-        background-color: #f3f3f3;
+        background-color: #ececec;
         //margin: 5px 20px;
     }
     .ws-menu-li-action{
 
-        background-color: #f3f3f3;
+        background-color: #ececec;
 
     }
 }
