--- a/src/modules/repository/components/repository.scss
+++ b/src/modules/repository/components/repository.scss
@@ -47,7 +47,7 @@
 
     .repository-header-menu-item{
         padding: 14px;
-        margin: 0 15px;
+        margin: 0 15px 0 0;
         cursor: pointer;
     }
 
