--- a/src/modules/apitest/http/apitest/caseContantStyle.scss
+++ b/src/modules/apitest/http/apitest/caseContantStyle.scss
@@ -6,6 +6,7 @@
         width: 300px;
         padding: 0 15px;
         border-right: 1px solid #e4e4e4;
+        background: #f9f9f9;
 
         .case-tab{
             width: 240px;
@@ -66,7 +67,7 @@
 }
 
 .action-li{
-    background-color: #f5f5f5;
+    background-color: #ececec;
     border-radius: 5px;
 }
 
@@ -168,7 +169,6 @@
     .left-tree-screen-item{
         margin: 0 6px;
         padding: 2px 5px;
-        background: #ffffff;
         cursor: pointer;
         border-bottom: 3px solid #fff;
     }
