--- a/src/modules/sysmgr/system/sysMana.scss
+++ b/src/modules/sysmgr/system/sysMana.scss
@@ -14,9 +14,11 @@
     }
 
     .tiklab-orga-aside {
-        width: 200px;
+        width: 240px;
         height: 100%;
-        border-right: 1px solid #e6f7ff;
+        border-right: 1px solid #e4e4e4;
+        background: #f9f9f9;
+
         ul,li {
             list-style: none;
         }
@@ -65,7 +67,6 @@
 }
 
 .sysmana-sider{
-    width: 200px;
     background-color: white;
     height: 100%;
 }
