--- a/src/modules/common/commonStyle.scss
+++ b/src/modules/common/commonStyle.scss
@@ -171,9 +171,6 @@
     }
 }
 
-
-
-
 .edit-api-name{
     font-size:20px;
     cursor: auto
@@ -198,3 +195,36 @@
     cursor: auto;
 }
 
+//头部公共css  左边title，右边一般添加
+.header-box-space-between{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+
+    .header-box-title{
+        font-weight: bold;
+    }
+}
+
+//搜索框
+.search-input-common{
+    width: 220px;
+    height: 32px;
+    border-radius: var(--pi-border-radius);
+    border: var(--pi-input-border);
+}
+
+//按钮颜色
+.important-btn{
+    background: var(--pi-base-color)!important;
+    color: #f0f0f0!important;
+    border-radius: var(--pi-border-radius);
+    font-size: var(--pi-font-size-13);
+}
+
+.content-box-center{
+    min-width: 860px;
+    max-width: 1440px;
+    margin: 0 auto;
+}
