--- a/src/modules/testcase/components/testcaseStyle.scss
+++ b/src/modules/testcase/components/testcaseStyle.scss
@@ -3,20 +3,14 @@
     max-width: 1440px;
     margin: 0 auto;
 
-    .testcase-header{
-        display: flex;
-
-    }
-
     .dynamic-select-box{
-        margin:15px 0;
+        margin:0 0 15px 0;
         display: flex;
         align-items: center;
         justify-content: space-between;
 
         .dynamic-select-box-item{
             width: 150px;
-            margin-right: 15px;
 
             .ant-select-selector{
                 border-radius: var(--pi-border-radius)!important;
@@ -50,3 +44,41 @@
 
     }
 }
+
+.table-list-box{
+    .ant-table{
+        border-bottom: 1px solid var(--pi-border-color);
+    }
+
+
+
+    .ant-table-thead > tr > th, .ant-table-tbody > tr > td, .ant-table tfoot > tr > th, .ant-table tfoot > tr > td{
+        padding: 8px;
+    }
+
+    .ant-table-thead > tr > th{
+        background:var(--pi-bg-color);
+    }
+
+    .ant-table-tbody > tr > td{
+        border-bottom: 0;
+    }
+
+    .tablelist  .ant-spin-nested-loading .ant-spin-container .ant-table-container .ant-table-tbody{
+        border-bottom: 1px solid #f0f0f0;
+    }
+
+    .ant-table-tbody>tr>td,  .ant-table tfoot>tr>td, .ant-table tfoot>tr>th{
+        padding: 8px ;
+    }
+
+    .ant-table-thead > tr > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before{
+        content: none;
+    }
+}
+
+.edit-icon{
+    cursor:pointer;
+    margin: 5px 0 0;
+}
+
