--- a/src/modules/testplan/components/testPlanStyle.scss
+++ b/src/modules/testplan/components/testPlanStyle.scss
@@ -1,10 +1,47 @@
 
 .testplan-form-info{
-    padding: 10px 25px;
-    border-bottom: 1px solid #e4e4e4;
+    margin: 10px 10px 20px;
+    //border-bottom: 1px solid #e4e4e4;
 }
 
 .form-edit-detail{
     display: flex;
+    gap:30px;
     padding: 5px 0;
+
+    .ant-form-item{
+        margin-bottom: 10px;
+    }
+
+    .ant-form-item-label > label{
+        color: #bababa;
+        font-size: 13px;
+    }
+
+    .ant-form-item-control-input-content:hover{
+        background: var(--pi-hover-color);
+    }
+}
+
+.progress-select-box-item{
+    width: 150px;
+
+    .ant-select-selector{
+        border-radius: var(--pi-border-radius)!important;
+        border: none!important;
+        background-color: #f4f5f7!important;
+    }
+}
+
+.test-plan-select{
+
+
+    .ant-select:not(.ant-select-customize-input) .ant-select-selector:hover{
+        background: var(--pi-hover-color);
+    }
+
+    .ant-select:not(.ant-select-customize-input) .ant-select-selector{
+        border: none;
+    }
+
 }
