--- a/src/common/styles/global.scss
+++ b/src/common/styles/global.scss
@@ -42,6 +42,7 @@
     --pi-hover-color:var(--tiklab-gray-300); //hover颜色
     --pi-action-color:var(--tiklab-gray-400); //选中
 
+    --pi-font-color-grey:#a3a3a3;
 
     --pi-background-color:#f6f8fa;
 
