--- a/src/modules/apitest/http/unitcase/components/unitcase.scss
+++ b/src/modules/apitest/http/unitcase/components/unitcase.scss
@@ -4,6 +4,131 @@
     margin: 15px 0;
 }
 
+.test-base{
+    margin: 10px 0 20px;
+
+    .ant-form-item{
+        margin: 0;
+        width: 43%;
+    }
+
+
+    .test-host-url{
+        //cursor: pointer;
+        padding: 8px;
+        width: 41%;
+        border: 1px solid #d9d9d9;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        background: #fff;
+    }
+    .test-host-url:hover{
+        cursor: auto;
+        color: #00adff;
+    }
+
+
+    .ant-input[disabled]{
+        color: #000;
+        background: white;
+        border-left: none;
+        flex: 1;
+    }
+
+    .ant-select:not(.ant-select-customize-input) .ant-select-selector{
+        height: 40px;
+        align-items: center;
+        color: #000;
+        background: white;
+        border-right: none;
+    }
+
+    .ant-btn{
+        height: 40px;
+        border-radius: 5px;
+    }
+
+    //.test-header{
+    //    display: flex;
+    //    margin: 0 0 15px 0 ;
+    //}
+
+    .test-url{
+        display: flex;
+        width: 100%;
+    }
+
+    .test-base-item{
+        margin: 0 0 0 15px;
+
+        .ant-btn{
+            height: 40px;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+    }
+
+    .ant-input{
+        border-radius: 0;
+        height: 40px;
+    }
+}
+
+.test-response-before{
+    position: relative;
+    margin: 10px 0 0 0;
+    height: 300px;
+    //border: 1px solid #eaeaea
+}
+.test-response-before-alert{
+    // width: 200px;
+    height: 20px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -70px;
+    margin-top: -10px;
+
+}
+
+.test-response-after{
+    min-height: 400px;
+}
+
+.test-response-error{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    border: 1px solid #f0f0f0
+}
+
+.test-response-before-img-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.test-response-before-img{
+    width: 150px;
+}
+
+
+.test-response-show{
+    display: block;
+}
+.test-response-hide{
+    display: none;
+}
+
+
+.test-responseInfo{
+    width: 300px;
+    display: flex;
+    justify-content: space-around;
+}
+
+
 .form-info{
     padding: 10px 25px;
     .ant-input[disabled] {
@@ -19,12 +144,6 @@
     padding-left: 3px;
 }
 
-.test-title{
-    height: 35px;
-    line-height: 35px;
-    padding: 0 0 0 5px;
-    border-left: 3px solid #1890ff;
-}
 
 .ex-title{
     margin: 15px 0;
@@ -359,5 +478,43 @@ $backgroud-color: #fff;
 .test-report-detail{
     background: #d2d2d2;
     padding: 10px;
+
+}
+
+//表格
+.tabPane-item-box{
+    th{
+        background:  var(--pi-bg-color) !important;
+    }
+
+    // 表头设置
+    .ant-table-thead>tr .ant-table-cell{
+        font-weight: var(--pi-font-weight-light);
+        padding: 7px;
+        font-size: 13px;
+    }
+
+    .ant-table-tbody>tr>td,  .ant-table tfoot>tr>td, .ant-table tfoot>tr>th{
+        padding: 2px !important;
+    }
+
+
+    .newRow-action-hidden{
+        display: none;
+    }
+    .newRow-action-show{
+        display: block;
+    }
+
+    .table-edit-icon{
+        cursor: pointer;
+        margin: 0 0 0 5px
+    }
+
+    .table-item-title{
+        font-size: var(--pi-font-size-12);
+        color: var(--pi-font-color-grey);
+    }
+
 
 }
