--- a/src/modules/apitest/http/apitest/caseContantStyle.scss
+++ b/src/modules/apitest/http/apitest/caseContantStyle.scss
@@ -18,13 +18,35 @@
         width: 100%;
         //margin: 0 10px;
         overflow: auto;
-        padding: 0 10px;
+        //padding: 0 10px;
 
         // 折叠面板
-        .ant-collapse-header{
-            background: #efefef;
-            margin: 10px 0;
+        //.ant-collapse-header{
+        //    background: #efefef;
+        //    margin: 10px 0;
+        //}
+        .ant-tabs{
+            height: 100%;
+
+            //.ant-tabs-nav-wrap{
+            //    background: #f9f9f9;
+            //    border-bottom: 1px solid #f3f3f3;
+            //}
+
+            .ant-tabs-content-holder{
+                height: 100%;
+
+                .ant-tabs-content{
+                    height: 100%;
+
+                    .ant-tabs-tabpane{
+                        height: 100%;
+                    }
+                }
+            }
         }
+
+
 
     }
 }
