--- a/src/modules/apitest/http/unitcase/components/unitcase.scss
+++ b/src/modules/apitest/http/unitcase/components/unitcase.scss
@@ -9,14 +9,14 @@
 
     .ant-form-item{
         margin: 0;
-        width: 43%;
+        width: 43.5%;
     }
 
 
     .test-host-url{
         //cursor: pointer;
         padding: 8px;
-        width: 41%;
+        width: 43.5%;
         border: 1px solid #d9d9d9;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -400,12 +400,28 @@ $backgroud-color: #fff;
     background: #efefef;
 }
 
+.history-item-box{
+    position: relative;
+}
+
 .history-item{
     font-size: 13px;
     display: flex;
     border-bottom: 1px solid #e4e4e4;
     padding: 10px;
+
 }
+.history-delete-icon{
+    display: none;
+    cursor: pointer;
+}
+.history-item-box:hover .history-delete-icon{
+    display: block;
+    position: absolute;
+    top: 35px;
+    right: 10px;
+}
+
 
 .history-item:hover{
     background: #e2f3ff;
