--- a/src/repository/repository/components/repository.scss
+++ b/src/repository/repository/components/repository.scss
@@ -49,6 +49,9 @@ ul{
 .repository-icon{
     width:var(--pi-icon-x);
     height:var(--pi-icon-x);
+    background: white;
+    border-radius: 4px;
+    padding: 3px;
 }
 
 
