--- a/src/test/testcase/components/caseContantStyle.scss
+++ b/src/test/testcase/components/caseContantStyle.scss
@@ -99,10 +99,10 @@
     background-color: #ececec;
     border-radius: 5px;
 }
-
-.ant-list-item{
-    justify-content: center;
-}
+//
+//.ant-list-item{
+//    justify-content: center;
+//}
 
 .tree-span{
     display: block;
