--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -326,3 +326,9 @@ table .icon{
 }
 
 
+.ws-img-icon{
+    //width: var(--pi-icon-x);
+    //height: var(--pi-icon-x);
+    width: 40px;
+    height: 40px;
+}
