--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2517386 */
-  src: url('iconfont.woff2?t=1684319354171') format('woff2'),
-       url('iconfont.woff?t=1684319354171') format('woff'),
-       url('iconfont.ttf?t=1684319354171') format('truetype');
+  src: url('iconfont.woff2?t=1692773785350') format('woff2'),
+       url('iconfont.woff?t=1692773785350') format('woff'),
+       url('iconfont.ttf?t=1692773785350') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-qiehuan1:before {
+  content: "\e789";
+}
+
+.icon-tianjia:before {
+  content: "\e64b";
 }
 
 .icon-shouji:before {
