--- a/src/common/styles/base.scss
+++ b/src/common/styles/base.scss
@@ -306,8 +306,7 @@ table .icon{
     max-width: 1440px;
     margin: 0 auto;
     padding: 0 10px;
-    height: 100%;
-
+    background: white;
 }
 
 
